--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-loader-spinner": "^4.0.0",
+    "react-player": "^2.9.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
